user page has a map to search and info about scooters

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
     <head>
         <title>what about the scooters?</title>
+        <link rel="stylesheet" href="scooters-first-page.css">
     </head>
 
     <body>
 
-        <div id="header">
-            <p>what about the scooters?</p>
+        <div id="content">
+            <div id="header-first-page">
+                <a href="search-for-scooter.html"><p>what about the scooters?</p></a> 
+            </div>
         </div>
 
     </body>
