adding an admin page, with the same structure as the user page, from the admin page scooters can be added, removed, visualized in database, identify problems

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
     <body>
 
-        <div id="content">
+        <div id="first-page">
             <div id="header-first-page">
-                <a href="search-for-scooter.html"><p>what about the scooters?</p></a> 
+                <p>what about the scooters?</p>
+                <div id="accounts">
+                    <a href="search-for-scooter.html" id="user-btn">user</a>
+                    <a href="administrator.html" id="admin-btn">admin</a>
+                </div>
             </div>
         </div>
 
