the user can set route and rent the selected scooter, also, the admin can manage the scooters, see the requests

--- a/search-for-scooter.html
+++ b/search-for-scooter.html
@@ -34,8 +34,8 @@
                             <li>Permissions: your speed limit is Y km/h</li>
                         </ul>
                     </div>
+                    <a href="#" id="set-route">Set route</a>
                     <a href="#" id="rent-scooter">rent this one</a> 
-    
                 </div>
             </div>
 
