--- a/administrator.html
+++ b/administrator.html
@@ -2,6 +2,7 @@
     <title>what about them?</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6hSEln3gDCanHPXgwmCkIbnqpCIHOwD8"></script>
     <link rel="stylesheet" href="administrator.css">
+    <script src="jquery-3.6.4.min.js"></script>
 </head>
 
 <body>
@@ -18,27 +19,28 @@
             </div>
 
             <div id="info">
-                <a href="#" id="add-scooter">add scooter</a>
-                <a href="#" id="select-scooter">select scooter</a>
+                
+                <a href="#" id="rental-requests">rental requests (this button actually does something)</a>
+                <ul id="user-specifications">Current request:
+                    <li>Name: John Doe</li>
+                    <li>Age: 34</li>
+                    <li>Permissions: ...</li>
+                </ul>
+                <a href="#" id="select-scooter">search/select scooter</a>
+                <a href="#" id="selected">selected scooter (this button also does something)</a>
                 <div id="scooter-status">
+                    <ul>Scooter status:
+                        <li>position/location (in or out of station, which station)</li>
+                        <li>status: public or private</li>
+                        <li>last X users</li>
+                        <li>battery left, battery defections</li>
+                        <li>other defections detectable</li>
+                    </ul>
 
                 </div>
                 <a href="#" id="remove-scooter">remove scooter</a>
+                <a href="#" id="add-scooter">add scooter</a>
 
-
-
-                <div id="location">
-                    <p id="in-station">Parked in station (name of the station) and charging (or, fully charged)</p>
-                    <p id="not-in-station">Not in station, (address) (location on map)</p>
-                    <p id="status">Public or Private scooter (if private, more specifications)</p>
-                    <p id="battery">Battery left: (65% or...fully charged)</p>
-                    <p id="km">Killometers keft - at maximum speed: 15km</p>
-                    <ul is="user-specifications">User specifications:
-                        <li>Age: X years</li>
-                        <li>Experience: X km - influences your permissions</li>
-                        <li>Permissions: your speed limit is Y km/h</li>
-                    </ul>
-                </div>
 
             </div>
         </div>
