adding a google font, fixing the user's page header

--- a/administrator.html
+++ b/administrator.html
@@ -1,5 +1,9 @@
 <head>
     <title>what about them?</title>
+    <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Jua&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Jua&display=swap" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6hSEln3gDCanHPXgwmCkIbnqpCIHOwD8"></script>
     <link rel="stylesheet" href="administrator.css">
     <script src="jquery-3.6.4.min.js"></script>
