--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
     <head>
         <title>what about the scooters?</title>
+        <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Jua&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Jua&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="scooters-first-page.css">
     </head>
 
