--- a/search-for-scooter.html
+++ b/search-for-scooter.html
@@ -3,6 +3,10 @@
 
     <head>
         <title>what about them?</title>
+        <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Jua&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Jua&display=swap" rel="stylesheet">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6hSEln3gDCanHPXgwmCkIbnqpCIHOwD8"></script>
         <link rel="stylesheet" href="search-for-scooter.css">
     </head>
@@ -34,7 +38,7 @@
                             <li>Permissions: your speed limit is Y km/h</li>
                         </ul>
                     </div>
-                    <a href="#" id="set-route">Set route</a>
+                    <a href="#" id="set-route">set route</a>
                     <a href="#" id="rent-scooter">rent this one</a> 
                 </div>
             </div>
