when selecting a scooter on map private information appears

--- a/search-for-scooter.html
+++ b/search-for-scooter.html
@@ -27,13 +27,12 @@
                 <div id="info-context">
                     <div id="info">
                         <p id="selected">Selected scooter</p>
-                        <div id="location-usage">
-                            <p id="in-station">Parked in station (name of the station) and charging (or, fully charged)</p>
-                            <p id="not-in-station">Not in station, (address) (location on map)</p>
-                            <p id="status">Public or Private scooter (if private, more specifications)</p>
-                            <p id="battery">Battery left: (65% or...fully charged)</p>
-                            <p id="km">Killometers keft - at maximum speed: 15km</p>
-                            <ul is="user-specifications">User specifications:
+                        <div id="product">
+                            <p id="location"></p>
+                            <p id="status"></p>
+                            <p id="battery"></p>
+                            <p id="km"></p>
+                            <ul is="user-specifications">My specifications:
                                 <li>Age: X years</li>
                                 <li>Experience: X km - influences your permissions</li>
                                 <li>Permissions: your speed limit is Y km/h</li>
