fixing some styiling on user's page

--- a/search-for-scooter.html
+++ b/search-for-scooter.html
@@ -28,6 +28,7 @@
                     <div id="info">
                         <p id="selected">Selected scooter</p>
                         <div id="product">
+                            <p id="name"></p>
                             <p id="location"></p>
                             <p id="status"></p>
                             <p id="battery"></p>
