the user's page has a dropdown list to select a station, the map zooms in the zone of the station, the products in that station can be selected on the map, and the return button shows you the map with all the product

--- a/search-for-scooter.html
+++ b/search-for-scooter.html
@@ -17,6 +17,16 @@
 
             <div id="header">
                 <p id="serch-text">find your scooter</p>
+                <div id="search">
+                    <!-- <input type="text" id="search-box" placeholder="search/select a station"> -->
+                    <select name="scooter-stations" id="search-box">
+                        <option value="" selected disabled>search/select a station</option>
+                        <option value="Aleea Studentilor Station">Aleea Studentilor</option>
+                        <option value="Piata Victoriei Station">Piata Victoriei</option>
+                        <option value="Petru si Pavel Station">Petru si Pavel</option>
+                    </select>   
+                    <a href="#" id="search-button">Search</a>
+                </div>
             </div>
 
             <div id="map-and-info">
@@ -41,6 +51,7 @@
                         </div>
                         <a href="#" id="set-route">set route</a>
                         <a href="#" id="rent-scooter">rent this one</a> 
+                        <a href="#" id="back-to-all-map">Return to All Products Map</a>
                     </div>
                 </div>
     
